# parametric_surfaces

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  tsconfig.json  webpack.config.js
app/: app.tsx  index.js  index.tsx
app/components/: canvas.tsx  selector.css  selector.tsx
app/components/canvas/: canvas.tsx  reducer.ts
app/index/: index.css  index.tsx  reducer.ts
src/: gl_context.rs  lib.rs  macros.rs  shader.rs  texture.rs
src/parametric_surfaces/: mod.rs
src/parametric_surfaces/cube/: geometry.rs  mod.rs  shaders.rs
src/parametric_surfaces/torus/: geometry.rs  mod.rs  shaders.rs  transform.rs
src/parametric_surfaces/triforce/: geometry.rs  mod.rs  shaders.rs  transform.rs
