[package]
name = "parametric_surfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
nalgebra-glm = "0.15.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlUniformLocation",
  "Window",
  "XrSession",
  "XrWebGlLayer"
]
